fixed small bug when the center of the list would shift becuase the left arrow would dissapper

--- a/style.css
+++ b/style.css
@@ -49,7 +49,12 @@ li:last-child {
 }
 
 #list {
-	text-align: center;
+	text-align: center; 
+}
+
+#center {
+	float: center;
+	padding-left: 64px 
 } 
 
 #left_list {	
